src/styles/globals.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
	list-style-type: none;
	font-size: 0.8rem;
}

*::-webkit-scrollbar-track
{
	background-color: transparent;
	border-radius: 10px;
}

*::-webkit-scrollbar
{
	width: 10px;
	background-color: transparent;
}

*::-webkit-scrollbar-thumb
{
	border-radius: 10px;
	background-color: #042c60;
}

.css-1odsfa1{
	margin-inline-start: 5rem !important;
}

